This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: SSL Module build fails with more pedantic compiler flags
Type: compile error Stage: resolved
Components: Build, SSL Versions: Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: christian.heimes Nosy List: Alexandru Ardelean, christian.heimes, miss-islington
Priority: normal Keywords: patch

Created on 2018-09-17 10:06 by Alexandru Ardelean, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 9347 merged Alexandru Ardelean, 2018-09-17 10:11
PR 9351 merged miss-islington, 2018-09-17 11:53
PR 9352 merged miss-islington, 2018-09-17 11:53
PR 9353 merged christian.heimes, 2018-09-17 12:15
Messages (6)
msg325518 - (view) Author: Alexandru Ardelean (Alexandru Ardelean) * Date: 2018-09-17 10:06
See: https://github.com/openwrt/packages/pull/7051
The issue seems a bit older ; see comment: 
https://github.com/python/cpython/pull/3943#discussion_r148949292

Build error happens on OpenWrt as well:


---------------------------------------------------------------
<openwrt>/build_dir/target-i386_pentium4_musl/Python-3.7.0/Modules/_ssl.c:4000:5: error: implicit declaration of function 'DH_free'; did you mean 'lh_free'? [-Werror=implicit-function-declaration]
     DH_free(dh);
     ^~~~~~~
     lh_free
cc1: some warnings being treated as errors

Python build finished successfully!
The necessary bits to build these optional modules were not found:
_tkinter              _uuid                 nis
To find the necessary bits, look in setup.py in detect_modules() for the module's name.

The following modules found by detect_modules() in setup.py, have been
built by the Makefile instead, as configured by the Setup files:
_abc                  atexit                pwd
time                  zlib

Failed to build these modules:
_ssl

Makefile:618: recipe for target 'sharedmods' failed

---------------------------------------------------------------

The fix seems to be to include <openssl/dh.h>.
msg325525 - (view) Author: Christian Heimes (christian.heimes) * (Python committer) Date: 2018-09-17 11:53
New changeset b3a271fc0ce3e13e427be8914decfc205a220ca8 by Christian Heimes (Alexandru Ardelean) in branch 'master':
bpo-34710: fix SSL module build (GH-9347)
https://github.com/python/cpython/commit/b3a271fc0ce3e13e427be8914decfc205a220ca8
msg325534 - (view) Author: miss-islington (miss-islington) Date: 2018-09-17 12:18
New changeset e2c0aea670d603b187733606a4601d77f355bc47 by Miss Islington (bot) in branch '3.7':
bpo-34710: fix SSL module build (GH-9347)
https://github.com/python/cpython/commit/e2c0aea670d603b187733606a4601d77f355bc47
msg325535 - (view) Author: miss-islington (miss-islington) Date: 2018-09-17 12:19
New changeset fff869e2a0ee3d2d65973d82e57f05479828f5a3 by Miss Islington (bot) in branch '3.6':
bpo-34710: fix SSL module build (GH-9347)
https://github.com/python/cpython/commit/fff869e2a0ee3d2d65973d82e57f05479828f5a3
msg325544 - (view) Author: miss-islington (miss-islington) Date: 2018-09-17 13:42
New changeset 5f883fcb9b50b8335953b3849b7f224d5cd59d56 by Miss Islington (bot) (Christian Heimes) in branch '2.7':
[2.7] bpo-34710: fix SSL module build (GH-9347) (GH-9353)
https://github.com/python/cpython/commit/5f883fcb9b50b8335953b3849b7f224d5cd59d56
msg325547 - (view) Author: Christian Heimes (christian.heimes) * (Python committer) Date: 2018-09-17 14:30
Thanks!
History
Date User Action Args
2022-04-11 14:59:06adminsetgithub: 78891
2018-09-17 14:30:27christian.heimessetmessages: + msg325547
2018-09-17 14:30:13christian.heimessetstatus: open -> closed
type: compile error
resolution: fixed
stage: patch review -> resolved
2018-09-17 13:42:41miss-islingtonsetmessages: + msg325544
2018-09-17 12:19:11miss-islingtonsetmessages: + msg325535
2018-09-17 12:18:26miss-islingtonsetnosy: + miss-islington
messages: + msg325534
2018-09-17 12:15:16christian.heimessetpull_requests: + pull_request8776
2018-09-17 11:53:55miss-islingtonsetpull_requests: + pull_request8775
2018-09-17 11:53:44miss-islingtonsetpull_requests: + pull_request8774
2018-09-17 11:53:36christian.heimessetmessages: + msg325525
2018-09-17 10:11:34Alexandru Ardeleansetkeywords: + patch
stage: patch review
pull_requests: + pull_request8770
2018-09-17 10:06:35Alexandru Ardeleancreate